--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "1. CSS/Visual Changes\r     - transition on the profile picture when you mouse over the picture\r     - text shadow on the h1 titles\r     - background colors on main body and left section\r 2. Code\r     - NPM Start will start the app\r     - title page of each page is dynamicaly changed based on page user is on\r     - Links open up in a new tab\r     - added an error template and all errors do get handled properly\r     - data file with the appropriate data fields",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/Feediz/sql-library-mgr#readme",
   "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
     "express": "^4.17.1",
+    "http-errors": "^1.6.3",
     "nodemon": "^2.0.2",
     "pug": "^2.0.4",
     "sequelize": "^5.21.5",
